# setenv

./: .travis.yml  setenv.cabal
src/System/: SetEnv.hs
test/: run.lhs
test/System/: SetEnvSpec.hs
